fixed scrollbar issue, better formatting

--- a/app/assets/stylesheets/meal_postings.scss
+++ b/app/assets/stylesheets/meal_postings.scss
@@ -71,8 +71,7 @@
 ///////////////////////
 
 .categories-area{
-  position: relative;
-  height: 5vh;
+  height: 7vh;
   width: 50%;
   background: repeating-radial-gradient(
     circle,
@@ -82,6 +81,17 @@
     #ffffff 100px
   );
   margin-bottom: 7px
+}
+
+.categories-btn, .cat-row {
+  position: relative;
+  height: 100%;
+}
+
+.cat-col {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .postings-list {
@@ -94,7 +104,7 @@
   width: 100%;
 }
 
-// The media-object (image) height should be the same as the media-body (text) height above
+// The media-object (image) height should be the same as the media-body (text) height below
 .media-object {
   height: 15vh;
   width: 10vw;
@@ -110,21 +120,26 @@
         // background-color: blue;
     }
     .row-body {
-        height: 40%;
+        height: 30%;
         // background-color: red;
     }
     .row-footer {
-        height: 20%;
+        height: 30%;
         // background-color: green;
     }
   }
 }
 
-.btn-info {
-  // padding: 0;
+.order-info {
+  height: 30px;
+  font-size: 14px;
+  padding: 3px;
 }
 
-// Meal Posting Show Page
+////////////////////////////
+// Meal Posting Show Page //
+////////////////////////////
+
 .meal-posting-bottom-info {
   margin-top: 18px;
 }
